Bug 254995 - KWordQuiz crashed after pressing Ctrl+I
Summary: KWordQuiz crashed after pressing Ctrl+I
Status: RESOLVED FIXED
Alias: None
Product: kwordquiz
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR crash
Target Milestone: ---
Assignee: Peter Hedlund
URL:
Keywords:
: 263509 267390 272382 (view as bug list)
Depends on:
Blocks:
 
Reported: 2010-10-22 21:46 UTC by mcberenguer
Modified: 2011-05-03 23:34 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (9.30 KB, text/plain)
2010-12-27 00:09 UTC, Torben Berndt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description mcberenguer 2010-10-22 21:46:27 UTC
Application: kwordquiz (0.9.0)
KDE Platform Version: 4.4.2 (KDE 4.4.2)
Qt Version: 4.6.2
Operating System: Linux 2.6.32-25-generic i686
Distribution: Ubuntu 10.04.1 LTS

-- Information about the crash:
KWordQuiz crashed after pressing Ctrl+I. 
If I add a new line in the dictionary through Edit->add new line, it works fine.

The crash can be reproduced some of the time.

 -- Backtrace:
Application: KWordQuiz (kwordquiz), signal: Segmentation fault
[KCrash Handler]
#6  0x08095fa6 in QModelIndex::column (this=0x927b3d0) at /usr/include/qt4/QtCore/qabstractitemmodel.h:68
#7  KWQCommandInsert::redo (this=0x927b3d0) at ../../../kwordquiz/src/kwqcommands.cpp:278
#8  0x0253b6f5 in QUndoStack::push (this=0x87409d0, cmd=0x927b3d0) at util/qundostack.cpp:541
#9  0x08090118 in KWQTableView::doEditInsert (this=0x891b288) at ../../../kwordquiz/src/kwqtableview.cpp:288
#10 0x08064ba1 in KWordQuizApp::slotEditInsert (this=0x872fd28) at ../../../kwordquiz/src/kwordquiz.cpp:962
#11 0x08070154 in KWordQuizApp::qt_metacall (this=0x872fd28, _c=QMetaObject::InvokeMetaMethod, _id=60, _a=0xbfde06e8) at ./kwordquiz.moc:154
#12 0x00ff6c9a in QMetaObject::metacall (object=0x872fd28, cl=QMetaObject::QueryPropertyDesignable, idx=60, argv=0xbfde06e8) at kernel/qmetaobject.cpp:237
#13 0x010053d5 in QMetaObject::activate (sender=0x8743330, m=0x2754d58, local_signal_index=1, argv=0xbfde06e8) at kernel/qobject.cpp:3293
#14 0x01e25bd9 in QAction::triggered (this=0x8743330, _t1=false) at .moc/release-shared/moc_qaction.cpp:263
#15 0x01e27dcc in QAction::activate (this=0x8743330, event=QAction::Trigger) at kernel/qaction.cpp:1255
#16 0x01e29698 in QAction::event (this=0x1, e=0x924efa8) at kernel/qaction.cpp:1181
#17 0x00ba6d63 in KAction::event (this=0x8743330, event=0xbfde0c08) at ../../kdeui/actions/kaction.cpp:129
#18 0x01e2c4dc in QApplicationPrivate::notify_helper (this=0x85b2ba0, receiver=0x8743330, e=0xbfde0c08) at kernel/qapplication.cpp:4300
#19 0x01e3305e in QApplication::notify (this=0xbfde1ae8, receiver=0x8743330, e=0xbfde0c08) at kernel/qapplication.cpp:3704
#20 0x00c92f2a in KApplication::notify (this=0xbfde1ae8, receiver=0x8743330, event=0xbfde0c08) at ../../kdeui/kernel/kapplication.cpp:302
#21 0x00ff1a3b in QCoreApplication::notifyInternal (this=0xbfde1ae8, receiver=0x8743330, event=0xbfde0c08) at kernel/qcoreapplication.cpp:704
#22 0x01e6e34d in QCoreApplication::sendEvent (this=0x85b2c4c, e=0xbfde1084) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:215
#23 QShortcutMap::dispatchEvent (this=0x85b2c4c, e=0xbfde1084) at kernel/qshortcutmap.cpp:879
#24 0x01e7015e in QShortcutMap::tryShortcutEvent (this=0x85b2c4c, o=0x891b288, e=0xbfde1084) at kernel/qshortcutmap.cpp:364
#25 0x01e34e43 in QApplication::notify (this=0xbfde1ae8, receiver=0x891b288, e=0xbfde1084) at kernel/qapplication.cpp:3746
#26 0x00c92f2a in KApplication::notify (this=0xbfde1ae8, receiver=0x891b288, event=0xbfde1084) at ../../kdeui/kernel/kapplication.cpp:302
#27 0x00ff1a3b in QCoreApplication::notifyInternal (this=0xbfde1ae8, receiver=0x891b288, event=0xbfde1084) at kernel/qcoreapplication.cpp:704
#28 0x01e2d2be in QCoreApplication::sendSpontaneousEvent (receiver=0x891b288, event=0x1) at ../../include/QtCore/../../src/corelib/kernel/qcoreapplication.h:218
#29 qt_sendSpontaneousEvent (receiver=0x891b288, event=0x1) at kernel/qapplication.cpp:5279
#30 0x01ee6d90 in QKeyMapper::sendKeyEvent (keyWidget=0x891b288, grab=false, type=QEvent::KeyPress, code=73, modifiers=..., text=..., autorepeat=<value optimized out>, count=<value optimized out>, 
    nativeScanCode=31, nativeVirtualKey=105, nativeModifiers=4) at kernel/qkeymapper_x11.cpp:1861
#31 0x01ee92f5 in QKeyMapperPrivate::translateKeyEvent (this=0x85daa90, keyWidget=0x891b288, event=0xbfde174c, grab=168) at kernel/qkeymapper_x11.cpp:1831
#32 0x01ebc757 in QApplication::x11ProcessEvent (this=0xbfde1ae8, event=0xbfde174c) at kernel/qapplication_x11.cpp:3394
#33 0x01eec60a in x11EventSourceDispatch (s=0x85b5da8, callback=0, user_data=0x0) at kernel/qguieventdispatcher_glib.cpp:146
#34 0x012695e5 in g_main_context_dispatch () from /lib/libglib-2.0.so.0
#35 0x0126d2d8 in ?? () from /lib/libglib-2.0.so.0
#36 0x0126d4b8 in g_main_context_iteration () from /lib/libglib-2.0.so.0
#37 0x0101d5d5 in QEventDispatcherGlib::processEvents (this=0x859d178, flags=...) at kernel/qeventdispatcher_glib.cpp:412
#38 0x01eec135 in QGuiEventDispatcherGlib::processEvents (this=0x859d178, flags=...) at kernel/qguieventdispatcher_glib.cpp:204
#39 0x00ff0059 in QEventLoop::processEvents (this=0xbfde1a44, flags=) at kernel/qeventloop.cpp:149
#40 0x00ff04aa in QEventLoop::exec (this=0xbfde1a44, flags=...) at kernel/qeventloop.cpp:201
#41 0x00ff469f in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#42 0x01e2c577 in QApplication::exec () at kernel/qapplication.cpp:3579
#43 0x08071378 in main (argc=1, argv=0xbfde1ca4) at ../../../kwordquiz/src/main.cpp:99

Reported using DrKonqi
Comment 1 Peter Hedlund 2010-10-27 22:28:01 UTC
SVN commit 1190485 by hedlund:

Do not crash when attempting to insert or delete rows.

BUG:254995

 M  +4 -0      kwqtableview.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1190485
Comment 2 Torben Berndt 2010-12-27 00:09:45 UTC
Created attachment 55271 [details]
New crash information added by DrKonqi

kwordquiz (0.9.1) on KDE Platform 4.5.1 (KDE 4.5.1) using Qt 4.7.0

- What I was doing when the application crashed:
Trying to insert a row after I already named the card.

-- Backtrace (Reduced):
#7  0x0809d466 in column (this=0xa3cd648) at /usr/include/qt4/QtCore/qabstractitemmodel.h:68
#8  KWQCommandInsert::redo (this=0xa3cd648) at ../../../kwordquiz/src/kwqcommands.cpp:283
#9  0xb683b605 in QUndoStack::push (this=0xa1471a8, cmd=0xa3cd648) at util/qundostack.cpp:541
#10 0x08093e18 in KWQTableView::doEditInsert (this=0xa293588) at ../../../kwordquiz/src/kwqtableview.cpp:336
#11 0x080704b1 in KWordQuizApp::slotEditInsert (this=0xa12a248) at ../../../kwordquiz/src/kwordquiz.cpp:1021
Comment 3 Peter Hedlund 2011-01-18 17:39:15 UTC
*** Bug 263509 has been marked as a duplicate of this bug. ***
Comment 4 Peter Hedlund 2011-03-01 17:59:50 UTC
*** Bug 267390 has been marked as a duplicate of this bug. ***
Comment 5 Peter Hedlund 2011-05-03 23:34:05 UTC
*** Bug 272382 has been marked as a duplicate of this bug. ***