Do not crash when attempting to insert or delete rows.

BUG:254995

svn path=/trunk/KDE/kdeedu/kwordquiz/; revision=1190485